[package]
name = "cookie-scout"
version = "0.1.0"
edition = "2021"
description = "A terminal tool to analyze cookies and trackers on websites"
authors = ["jconvery1"]
license = "MIT"
repository = "https://github.com/jconvery1/cookie-scout"
readme = "README.md"
keywords = ["cookies", "privacy", "trackers", "web", "security"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["cookies", "rustls-tls"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
# Terminal UI and spinners
indicatif = "0.17"
console = "0.15"
# Colors and styling
owo-colors = "4"
# HTML parsing
scraper = "0.18"
# Regex for pattern matching
regex = "1"
# URL parsing
url = "2"
# Error handling
anyhow = "1"
# Serialize/Deserialize
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true

